applications/cilium/templates/gateway.yaml

# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: cilium-gateway-http
#   namespace: kube-system
# spec:
#   gatewayClassName: cilium
#   listeners:
#     - name: web-gw-http
#       protocol: HTTP
#       port: 8000
#       allowedRoutes:
#         namespaces:
#           from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-https
  namespace: kube-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.0.202
  listeners:
    - name: web-gw-https
      protocol: HTTPS
      port: 8043
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: cilium-gateway-https-secret
